Corrections on tablet version

--- a/css/_contact.scss
+++ b/css/_contact.scss
@@ -45,6 +45,7 @@
       height: 35px;
       margin: 10px 0 30px 0;
       border-radius: 5px;
+      color: white;
       background-color: rgba(0, 0, 0, 0.65);
       border: 1px solid white;
 
