--- a/css/_nav.scss
+++ b/css/_nav.scss
@@ -160,6 +160,8 @@ body {
       font-weight: 600;
       flex-grow: 1;
 
+
+
       .button {
         width: 129px;
         height: 30px;
@@ -169,10 +171,16 @@ body {
         border-color: black;
         margin-left: 10px;
       }
+
     }
     &__link {
       text-decoration: none;
       color: black;
+    }
+
+    .nav__list-item:hover{
+      transform: scale(1.1);
+      transition: 0.3s;
     }
   }
 
@@ -218,6 +226,7 @@ form div {
 }
 .nav__link{
     margin: 0 20px;
+    
 }
 
 
