--- a/css/_new-model.scss
+++ b/css/_new-model.scss
@@ -14,6 +14,7 @@
     &__header{
         position: relative;
         height: 400px;
+        width: 100vw;
         display:flex;
         flex-direction: column;
         align-items: center;
@@ -45,7 +46,9 @@
 
     &__img{
         position:absolute;
-        top: 170px;
+        top: 10%;
+        width: 100%;
+        height: 100%;
         // transform: scale(1.3);
         &--leafs{
             transform: translateX(20px);
@@ -59,10 +62,9 @@
     &__vid{
         height: 125%;
         width: 125%;
-        top: 0;
-        left: 0;
         opacity: .5;
         position: absolute;
+
         object-fit: cover;
         -webkit-mask-image: -webkit-gradient(linear, left 90%, left top, from(rgba(0,0,0,1)), to(rgba(0,0,0,0)))        
     }
@@ -158,9 +160,9 @@
         }
 
         &__img{
-            transform: scale(1.6);
-            left: 55%;
-            top: 38%;
+            transform: scale(1);
+            left: 15%;
+            top: 5%;
         }
 
         &__vid{
