--- a/css/style.css
+++ b/css/style.css
@@ -156,6 +156,10 @@ body {
     text-decoration: none;
     color: black;
   }
+  .nav .nav__list-item:hover {
+    transform: scale(1.1);
+    transition: 0.3s;
+  }
   .header {
     display: flex;
     justify-content: center;
@@ -222,6 +226,7 @@ form div {
 .new-model__header {
   position: relative;
   height: 400px;
+  width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -247,7 +252,9 @@ form div {
 }
 .new-model__img {
   position: absolute;
-  top: 170px;
+  top: 10%;
+  width: 100%;
+  height: 100%;
 }
 .new-model__img--leafs {
   transform: translateX(20px);
@@ -258,8 +265,6 @@ form div {
 .new-model__vid {
   height: 125%;
   width: 125%;
-  top: 0;
-  left: 0;
   opacity: 0.5;
   position: absolute;
   -o-object-fit: cover;
@@ -344,9 +349,9 @@ form div {
     font-weight: lighter;
   }
   .new-model__img {
-    transform: scale(1.6);
-    left: 55%;
-    top: 38%;
+    transform: scale(1);
+    left: 15%;
+    top: 5%;
   }
   .new-model__vid {
     position: absolute;
@@ -404,10 +409,10 @@ form div {
   padding: 20px;
   margin: 10px 0;
   border-radius: 10px;
-  width: 90vw;
-  height: 440px;
+  max-width: 600px;
+  height: 100%;
   display: flex;
-  flex-flow: column;
+  flex-direction: column;
   box-shadow: rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px, rgba(17, 17, 26, 0.1) 0px 24px 80px;
 }
 .gallery .card .buttons {
@@ -417,8 +422,8 @@ form div {
 }
 .gallery .card .card__img {
   margin: 10px;
-  width: 80%;
-  height: 100%;
+  width: 100%;
+  height: 90%;
 }
 .gallery .card .card__separator {
   width: 100%;
@@ -613,6 +618,7 @@ form div {
   height: 35px;
   margin: 10px 0 30px 0;
   border-radius: 5px;
+  color: white;
   background-color: rgba(0, 0, 0, 0.65);
   border: 1px solid white;
 }
@@ -927,6 +933,13 @@ form div {
   }
   .footer .icons .icons__anchor {
     margin: 0;
+  }
+  .footer .icons__anchor {
+    transition: 0.3s;
+  }
+  .footer .icons__anchor:hover {
+    transform: scale(1.2);
+    transition: 0.3s;
   }
   .footer__content {
     display: flex;
